<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sample Linear Layout</string>
    <string name="var1">ini pesan</string>
    <string name="bsignin">Sign-In</string>
    <string name="tLogin">LOGIN</string>
    <string name="tData">Data Diri</string>
    <string name="tEmail">Email: </string>
    <string name="tPassword">Password: </string>
    <string name="txemail">Ini hasil email</string>
    <string name="txPassword">Ini Hasil Password</string>
    <string name="Label2">Login Berhasil</string>
    <string name="mnDaftar">Pendaftaran</string>
    <string name="enama">Masukan Nama</string>
    <string name="eemail">Masukan Email</string>
    <string name="epass">Masukan Password</string>
    <string name="erepass">Masukan Password Kembali</string>
    <string name="ealamat">Masukan Alamat</string>
</resources>




