<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="91dp"
        android:layout_height="31dp"
        android:text="@string/mnDaftar"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="74dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:text="@string/enama"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="157dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:text="@string/eemail"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="243dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:text="@string/epass"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="325dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:text="@string/erepass"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="495dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:text="@string/ealamat"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="410dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSimpan"
        android:layout_width="83dp"
        android:layout_height="66dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_save"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="617dp" />

</androidx.constraintlayout.widget.ConstraintLayout>